# ADANerds

./: .gitignore  ADANerds.code-workspace  README.md
.github/workflows/: pylint.yml
adanerds/: README.md  datalodge.db  delivery.db  pyproject.toml
adanerds/adanerds/: Dockerfile  cloudbuild.json  docker-compose.yml  example-my-service-account.json
adanerds/adanerds/FAAS/: requirements.txt
adanerds/adanerds/FAAS/account_service/: gcloud command.txt  main.py
adanerds/adanerds/FAAS/notification_service/: main.py
adanerds/adanerds/FAAS/picture_service/: gcloud command.txt  main.py  requirements.txt
adanerds/adanerds/FAAS/refund_service/: gcloud command.txt  main.py  requirements.txt
adanerds/adanerds/Restful-API/: Dockerfile  app.py  db.py
adanerds/adanerds/Restful-API/Account/: Dockerfile  account.py  account_doa.py  account_pub.py  app.py  authorization.py  cloudbuild_cloudrun_account.json  db.py  pub_sub.py
adanerds/adanerds/Restful-API/Booking/: Dockerfile  app.py  authorization.py  booking.py  booking_doa.py  booking_pub.py  cloudbuild_cloudrun_booking.json  db.py  requirements.txt
adanerds/adanerds/Restful-API/Listing/: Dockerfile  app.py  cloudbuild_cloudrun_listing.json  db.py  listing.py  listing_doa.py  listing_sub.py  requirements.txt
adanerds/adanerds/Restful-API/daos/: account_doa.py  booking_doa.py  listing_doa.py
adanerds/adanerds/Restful-API/openapi/: account-api.yaml
adanerds/adanerds/Restful-API/resources/: account.py  booking.py  listing.py
adanerds/adanerds/api_gateway/: Dockerfile  cloudbuild_api_gateway.json  example_hosts.txt  replace_hosts.py
adanerds/adanerds/api_gateway/krakend/: krakend.json
adanerds/adanerds/authentication_service/: Dockerfile  cloudbuild_cloudrun_auth.json  db.py  requirements.txt
adanerds/adanerds/authentication_service/daos/: user_dao.py
(+7 files in other folders)
