[tool.poetry]
name = "adanerds"
version = "0.1.0"
description = ""
authors = ["Marijn <m.n.vanhouwelingen@tilburguniveristy.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-utils = "^0.41.2"
connexion = {extras = ["flask"], version = "^3.0.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
