[tool.poetry]
name = "adanerds"
version = "0.1.0"
description = ""
authors = ["Marijn <m.n.vanhouwelingen@tilburguniveristy.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
flask-sqlalchemy = "^3.1.1"
sqlalchemy-utils = "^0.41.2"
connexion = {extras = ["uvicorn"], version = "^3.0.6"}
a2wsgi = "^1.10.4"
uvicorn = "^0.29.0"
swagger-ui-bundle = "^1.1.0"
flask-cors = "^4.0.1"
functions-framework = "^3.5.0"
google-cloud-pubsub = "^2.21.1"
google-cloud-storage = "^2.16.0"
sqlalchemy-bigquery = "^1.11.0"
google-cloud-bigquery-storage = "^2.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
